# tree-sitter-gstlaunch

./: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-gstlaunch.h  tree-sitter-gstlaunch.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_gstlaunch/: __init__.py  binding.c
bindings/rust/: lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
